Changed controls and command layout. Fixed vertical align in IE11.

--- a/css/style.scss
+++ b/css/style.scss
@@ -18,7 +18,7 @@ body {
     align-content: center;
     align-items: center;
     min-width: 100vw;
-    min-height: calc(100vh - 50px);
+    height: calc(100vh - 50px);
 }
 				
 .content {
@@ -27,9 +27,26 @@ body {
 }
 
 .keyword {
-	font-weight: 900;
+	font-weight: bold;
 	text-transform: uppercase;
 	letter-spacing: 1.25px;
+}
+
+.btn {
+	color: white;
+	background: #000000;
+	text-transform: uppercase;
+	font-weight: bold;
+	border: 1px solid white;
+	border-radius: 5px;	
+
+	&:hover {
+		background: lighten($controls-color, 10%);;
+	}
+}
+
+.btn-start {
+	padding: 0.5em 2em;
 }
 
 .command, 
@@ -63,9 +80,10 @@ body {
 	border-radius: 7px;
 	margin: 0 1em;
 	font-size: 1.25em;
-	background: #050566;
-	background-image: -webkit-linear-gradient(#0000ff, #050566);
-	background-image: linear-gradient(#0000ff, #050566);
+
+	background: $controls-color;
+	background-image: -webkit-linear-gradient(lighten($controls-color, 10%), $controls-color);
+	background-image: linear-gradient(lighten($controls-color, 10%), $controls-color);
 
 	p {
 		margin: 0.5em 0;
@@ -73,13 +91,10 @@ body {
 
 }
 
-
-
 .controls {		
-	background: #0000ff;
-	margin: 1em auto 0 auto;
+	background: lighten($controls-color, 10%);
+	/*margin: 1em auto 0 auto;*/
 	text-align: center; 
-	min-height: 50px;
 	
 	width: 100%;
 	position: fixed;
@@ -89,17 +104,28 @@ body {
 	display: none;
 
 	ul {
-		padding: 0;
+		padding: 0.5em 0;
+		margin: 0;
 	
 		li {
 			display: inline-block;
-			margin-left: 15px;
+			/*margin-left: 15px;
 			margin-right: 15px;
+			*/
 		}
 	}	
 
 	a {
 		color: white;
+		display: block;
+		padding: 0.5em 1.5em; 
+		border: 1px solid lighten($controls-color, 5%);
+  		background: lighten($controls-color, 15%);
+
+  		&:hover {
+  			background: black;
+  			border-color: white;
+  		}
 	}
 }
 
@@ -113,3 +139,4 @@ body {
 		font-size: 1em;
 	}
 }
+
